# gebaar-libinput

./: CMakeLists.txt  README.md
src/: daemonizer.cpp  main.cpp  util.cpp
src/config/: config.cpp  config.h
src/daemon/: daemonizer.cpp  daemonizer.h
src/io/: input.cpp  input.h
src/utils/: string-from-char.cpp
